--- a/scratch.html
+++ b/scratch.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<title>Laravel From Scratch Blog</title>
+<title>Jeff's Blog</title>
 <link
     href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
     rel="stylesheet"
